--- a/src/package.json
+++ b/src/package.json
@@ -29,6 +29,7 @@
     "babel-preset-es2015": "^6.18.0",
     "draft-js": "^0.9.1",
     "draft-js-export-markdown": "^0.2.2",
-    "lodash": "^4.17.2"
+    "lodash": "^4.17.2",
+    "slate": "^0.16.9"
   }
 }
