--- a/src/package.json
+++ b/src/package.json
@@ -8,11 +8,13 @@
     "babel": "^6.5.2",
     "babel-plugin-transform-react-jsx": "^6.8.0",
     "babel-register": "^6.16.3",
+    "electron-storage": "^1.0.7",
     "gulp": "^3.9.1",
     "gulp-combine-media-queries": "^0.2.0",
     "gulp-plumber": "^1.1.0",
     "gulp-sass": "^2.3.2",
     "gulp-sourcemaps": "^1.7.3",
+    "moment": "^2.17.1",
     "react": "^15.3.2",
     "react-dom": "^15.3.2"
   },
