--- a/src/package.json
+++ b/src/package.json
@@ -14,11 +14,13 @@
     "gulp-plumber": "^1.1.0",
     "gulp-sass": "^2.3.2",
     "gulp-sourcemaps": "^1.7.3",
+    "material-ui": "^0.17.0",
     "moment": "^2.17.1",
-    "react": "^15.3.2",
+    "react": "^15.4.2",
     "react-dnd": "^2.2.3",
     "react-dnd-html5-backend": "^2.2.3",
-    "react-dom": "^15.3.2"
+    "react-dom": "^15.4.2",
+    "react-tap-event-plugin": "^2.0.1"
   },
   "babel": {
     "sourceMaps": "inline",
