[add] app menu.

--- a/package.json
+++ b/package.json
@@ -1,9 +1,11 @@
 {
   "private": true,
   "devDependencies": {
+    "electron": "^1.6.2",
     "electron-prebuilt": "^1.4.3"
   },
   "scripts": {
     "start": "node_modules/.bin/electron src"
-  }
+  },
+  "main": "src/app/javascripts/main/main.jsx"
 }
