[change] electron-prebuilt -> electron.

--- a/package.json
+++ b/package.json
@@ -1,8 +1,7 @@
 {
   "private": true,
   "devDependencies": {
-    "electron": "^1.6.2",
-    "electron-prebuilt": "^1.4.3"
+    "electron": "^1.6.2"
   },
   "scripts": {
     "start": "node_modules/.bin/electron src"
