[change] electorn-packager => electron-builder.

--- a/package.json
+++ b/package.json
@@ -1,10 +1,33 @@
 {
+  "name": "Sudachi-beta",
+  "version": "0.0.4",
+  "author": "ktp",
+  "description": "Sudachi is a desktop application for daily personal scheduling.",
+  "build": {
+    "appId": "com.electron.beta.sudachi",
+    "directories": {
+      "app": "src",
+      "output": "dist"
+    },
+    "artifactName": "${productName}_installer.${ext}",
+    "mac": {
+      "category": "public.app-category.developer-tools",
+      "target": "dmg"
+    },
+    "win": {
+      "target": "nsis"
+    }
+  },
   "private": true,
   "devDependencies": {
-    "electron": "^1.6.2"
+    "electron": "^1.6.2",
+    "electron-builder": "^18.6.2"
   },
   "scripts": {
-    "start": "node_modules/.bin/electron src"
+    "start": "node_modules/.bin/electron src",
+    "pack": "npm run pack:mac && npm run pack:win",
+    "pack:mac": "./node_modules/.bin/build --mac --x64",
+    "pack:win": "./node_modules/.bin/build --win --x64"
   },
   "main": "src/app/javascripts/main/main.jsx"
 }
