--- a/src/package.json
+++ b/src/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "pm6-30",
-  "version": "1.0.0",
-  "description": "task management tool to finish your job until 6:30 pm.",
+  "name": "Sudachi-beta",
+  "version": "0.0.4",
+  "description": "Sudachi is a desktop application for daily personal scheduling.",
   "main": "./app/javascripts/main/main.jsx",
   "author": "ktp",
   "dependencies": {
@@ -20,7 +20,10 @@
     "react-dnd": "^2.2.3",
     "react-dnd-html5-backend": "^2.2.3",
     "react-dom": "^15.4.2",
-    "react-tap-event-plugin": "^2.0.1"
+    "react-tap-event-plugin": "^2.0.1",
+    "babel-preset-es2015": "^6.18.0",
+    "lodash": "^4.17.2",
+    "slate": "^0.19.2"
   },
   "babel": {
     "sourceMaps": "inline",
@@ -30,10 +33,5 @@
         "react"
       ]
     ]
-  },
-  "devDependencies": {
-    "babel-preset-es2015": "^6.18.0",
-    "lodash": "^4.17.2",
-    "slate": "^0.19.2"
   }
 }
