[add] publish and auto update settings.

--- a/package.json
+++ b/package.json
@@ -2,20 +2,34 @@
   "name": "Sudachi-beta",
   "version": "0.0.4",
   "author": "ktp",
+  "repository": "https://github.com/kato1628/Sudachi",
   "description": "Sudachi is a desktop application for daily personal scheduling.",
   "build": {
     "appId": "com.electron.beta.sudachi",
+    "productName": "Sudachi Beta",
     "directories": {
       "app": "src",
       "output": "dist"
     },
-    "artifactName": "${productName}_installer.${ext}",
+    "artifactName": "${name}-${version}-for-${os}-installer.${ext}",
     "mac": {
       "category": "public.app-category.developer-tools",
-      "target": "dmg"
+      "target": "dmg",
+      "publish": [
+        {
+          "provider": "github",
+          "owner": "kato1628"
+        }
+      ]
     },
     "win": {
-      "target": "nsis"
+      "target": "nsis",
+      "publish": [
+        {
+          "provider": "github",
+          "owner": "kato1628"
+        }
+      ]
     }
   },
   "private": true,
@@ -27,7 +41,7 @@
     "start": "node_modules/.bin/electron src",
     "pack": "npm run pack:mac && npm run pack:win",
     "pack:mac": "./node_modules/.bin/build --mac --x64",
-    "pack:win": "./node_modules/.bin/build --win --x64"
+    "pack:win": "./node_modules/.bin/build --win --x64 --ia32"
   },
   "main": "src/app/javascripts/main/main.jsx"
 }
