--- a/src/package.json
+++ b/src/package.json
@@ -4,6 +4,7 @@
   "description": "Sudachi is a desktop application for daily personal scheduling.",
   "main": "./app/javascripts/main/main.jsx",
   "author": "ktp",
+  "repository": "https://github.com/kato1628/Sudachi",
   "dependencies": {
     "babel": "^6.5.2",
     "babel-plugin-transform-react-jsx": "^6.8.0",
@@ -23,7 +24,9 @@
     "react-tap-event-plugin": "^2.0.1",
     "babel-preset-es2015": "^6.18.0",
     "lodash": "^4.17.2",
-    "slate": "^0.19.2"
+    "slate": "^0.19.2",
+    "electron-log": "^2.2.6",
+    "electron-updater": "^2.1.2"
   },
   "babel": {
     "sourceMaps": "inline",
