--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "Sudachi-beta",
-  "version": "0.0.4",
+  "version": "0.0.5",
   "author": "ktp",
-  "repository": "https://github.com/kato1628/Sudachi",
+  "repository": "http://github.com/kato1628/Sudachi",
   "description": "Sudachi is a desktop application for daily personal scheduling.",
   "build": {
-    "appId": "com.electron.beta.sudachi",
+    "appId": "io.sudachi",
     "productName": "Sudachi Beta",
     "directories": {
       "app": "src",
@@ -13,8 +13,7 @@
     },
     "artifactName": "${name}-${version}-for-${os}-installer.${ext}",
     "mac": {
-      "category": "public.app-category.developer-tools",
-      "target": "dmg",
+      "category": "public.app-category.productivity",
       "publish": [
         {
           "provider": "github",
@@ -34,15 +33,19 @@
   },
   "private": true,
   "devDependencies": {
-    "electron": "^1.6.2",
-    "electron-builder": "^18.6.2"
+    "electron": "^1.6.11",
+    "electron-builder": "^19.4.2"
   },
   "scripts": {
     "start": "node_modules/.bin/electron src",
     "pack": "npm run pack:mac && npm run pack:win",
     "pack:mac": "./node_modules/.bin/build --mac --x64",
     "pack:win": "./node_modules/.bin/build --win --x64 --ia32",
-    "publish" : "./node_modules/.bin/build --publish always"
+    "publish": "./node_modules/.bin/build --publish always",
+    "release": "build"
   },
-  "main": "src/app/javascripts/main/main.jsx"
+  "main": "src/app/javascripts/main/main.jsx",
+  "dependencies": {
+    "electron-updater": "^2.3.0"
+  }
 }
