--- a/src/package.json
+++ b/src/package.json
@@ -8,13 +8,17 @@
   "dependencies": {
     "babel": "^6.5.2",
     "babel-plugin-transform-react-jsx": "^6.8.0",
+    "babel-preset-es2015": "^6.18.0",
     "babel-register": "^6.16.3",
+    "electron-log": "^2.2.6",
     "electron-storage": "^1.0.7",
+    "electron-updater": "^2.3.0",
     "gulp": "^3.9.1",
     "gulp-combine-media-queries": "^0.2.0",
     "gulp-plumber": "^1.1.0",
-    "gulp-sass": "^2.3.2",
-    "gulp-sourcemaps": "^1.7.3",
+    "gulp-sass": "^3.1.0",
+    "gulp-sourcemaps": "^2.6.0",
+    "lodash": "^4.17.2",
     "material-ui": "^0.17.0",
     "moment": "^2.17.1",
     "react": "^15.4.2",
@@ -22,11 +26,7 @@
     "react-dnd-html5-backend": "^2.2.3",
     "react-dom": "^15.4.2",
     "react-tap-event-plugin": "^2.0.1",
-    "babel-preset-es2015": "^6.18.0",
-    "lodash": "^4.17.2",
-    "slate": "^0.19.2",
-    "electron-log": "^2.2.6",
-    "electron-updater": "^2.3.0"
+    "slate": "^0.19.2"
   },
   "babel": {
     "sourceMaps": "inline",
