--- a/src/package.json
+++ b/src/package.json
@@ -10,6 +10,7 @@
     "babel-plugin-transform-react-jsx": "^6.8.0",
     "babel-preset-es2015": "^6.18.0",
     "babel-register": "^6.16.3",
+    "classnames": "^2.2.5",
     "electron-log": "^2.2.6",
     "electron-storage": "^1.0.7",
     "electron-updater": "^2.3.0",
