--- a/package.json
+++ b/package.json
@@ -33,8 +33,8 @@
   },
   "private": true,
   "devDependencies": {
-    "electron": "^1.6.11",
-    "electron-builder": "^19.4.2"
+    "electron": "^1.7.6",
+    "electron-builder": "^19.27.7"
   },
   "scripts": {
     "start": "node_modules/.bin/electron src",
@@ -46,6 +46,8 @@
   },
   "main": "src/app/javascripts/main/main.jsx",
   "dependencies": {
-    "electron-updater": "^2.3.0"
+    "electron-updater": "^2.8.9",
+    "process-nextick-args": "^1.0.7",
+    "util-deprecate": "^1.0.2"
   }
 }
