[add] publisher name of sudachi pack for win.

--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     },
     "win": {
       "target": "nsis",
+      "publisherName": "ktp",
       "publish": [
         {
           "provider": "github",
